[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = chaostoolkit
url = https://chaostoolkit.org
project_urls =
    Docs: RTD = https://docs.chaostoolkit.org
    CI: GitHub = https://github.com/chaostoolkit/chaostoolkit/actions
    GitHub: issues = https://github.com/chaostoolkit/chaostoolkit/issues
    GitHub: repo = https://github.com/chaostoolkit/chaostoolkit
description = Chaos Engineering Toolkit automation framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Chaos Toolkit
author_email = contact@chaostoolkit.org
zip_safe = False
license_file = LICENSE
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    click>=7.0
    click-plugins>=1.0.4
    logzero>=1.5.0
    chaostoolkit-lib~=1.19
    requests>=2.21
    python-json-logger>=0.1.11
    pyyaml~=5.4
    importlib-metadata>=1.2.0; python_version < '3.8'
tests_require = 
    pycodestyle
    coverage
    pytest>=2.8
    pytest-cov
    pytest-sugar
    semver

[options.entry_points]
console_scripts =
    chaos = chaostoolkit.__main__:cli

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaostoolkit
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings
